--- a/.hintrc
+++ b/.hintrc
@@ -12,6 +12,18 @@
           "width: fit-content"
         ]
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
     ]
   }
 }
